fix: font sizing and image resolution blurred

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,5 +37,6 @@ body {
 }
 
 html {
-  scroll-behavior: smooth;
+  @apply text-white;
+  @apply scroll-smooth;
 }
